# LudumDare50

./: .gitattributes  .gitignore  edit.bat  edit.sh  run.bat  run.sh
Crates/terrain_array/: Cargo.toml
Crates/terrain_array/src/: lib.rs
ExportedBinaries/Linux/: OasisOfLostHope.pck  OasisOfLostHope.x86_64
Godot/: SFX.gd  export_presets.cfg  project.godot
Godot/Assets/: GhostMaterial.tres  SmallTextTheme.tres  TextTheme.tres
Godot/Assets/Blender/: Zeppelin.blend
Godot/Assets/Fonts/: CREDITS.txt
Godot/Assets/Shader/: Ground.gdshader  Matcap.gdshader
Godot/Environment/: Environment.tres
Godot/Models/: Irrigation.glb  Ore.glb  Water.glb  Zeppelin.glb  pump.glb
Godot/Native/: AddStructure.gdns  AmountsUpdated.gdns  BlightUpdateResult.gdns  BlightUpdated.gdns  GodotApi.gdns  LittleStruct.gdns  NativeLib.gdnlib  QueryResult.gdns  SpatialApi.gdns  SpatialObjects.gdns  Spatials.gdns  Terrain.gdns  Zeppelin.gdns
Godot/SFX/: CREDITS.txt
Godot/Scene/Objects/: CleanParticles.tscn  Irrigation.tscn  Irrigation2.gd  Irrigation2.tscn  IrrigationBase.gd  Ore.tscn  Ore2.tscn  Pipe.tscn  Pump.tscn  Pump2.gd  Pump2.tscn  PumpBase.gd  (+8 more)
Rust/: Cargo.toml  build.rs
Rust/src/: lib.rs  world.rs
Rust/src/godot/: add_structure.rs  amounts_updated.rs  blight_update_result.rs  blight_updated.rs  mod.rs  query_result.rs  spatial_api.rs  spatial_objects.rs  spatials.rs  terrain.rs  zeppelin.rs
Rust/src/objects/: mod.rs  pipe.rs  structure.rs
Rust/tests/: test.rs
godot/: project.godot
godot/Native/: NativeLib.gdnlib
rust/: Cargo.toml  build.rs
rust/src/: world.rs
(+20 files in other folders)
