[package]
name = "ld50"
version = "0.1.0"
authors = ["LD"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# I need formatted feature because CLion doesn't index symbols otherwise :( 
gdnative = { git = "https://github.com/Bromeon/godot-rust.git", branch = "yolo", features = ["formatted"] }
noise = "0.7"
rstar = "0.9.2"
rand = "0.8.5"

[build-dependencies]
heck = "0.4.0"
